Add Import term

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -5,6 +5,7 @@
     "Export Caught Items": "Exporter les éléments obtenus",
     "Copy to Clipboard": "Copier dans le presse-papier",
     "Import Caught Items": "Importer les éléments obtenus",
+    "Import": "Importer",
     "Paste Here": "Coller ici",
     "Copied!": "Copié !",
     "Not Yet Obtained": "Pas encore obtenu",
