--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -5,6 +5,7 @@
     "Export Caught Items": "取得済みのエキスポート",
     "Copy to Clipboard": "クリップボードへコピーする",
     "Import Caught Items": "取得済みのインポート",
+    "Import": "インポート",
     "Paste Here": "ここに貼り付ける",
     "Copied!": "コピーしました！",
     "Not Yet Obtained": "未取得",
