Fixed Horseshoe Crab not being translated to ES

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -488,7 +488,7 @@
     "Spiny lobster": "Langosta espinosa",
     "Lobster": "Bogavante",
     "Giant isopod": "Isópodo gigante",
-    "Horseshoe crab": "Cangrejo herradura",
+    "Horseshoe Crab": "Cangrejo herradura",
     "Sea pineapple": "Piña de mar",
     "Spotted garden eel": "Anguila jardinera",
     "Flatworm": "Gusano políclado",
