Translate new speed strings (sea creatures) to ES

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -442,17 +442,11 @@
     "Welcome Horizons": "Nuevo horizonte",
     "Sea Creatures": "Criaturas marinas",
     "Stationary": "Quieto",
-    "Quick": "Rápido",
+    "Very slow": "Muy lento",
     "Slow": "Lento",
-    "Moderate Consistent Movement": "Movimiento uniforme moderado",
-    "Medium Consistent Movement": "Movimiento uniforme medio",
-    "Slow Consistent Movement": "Movimiento uniforme lento",
-    "Quick Short Lunges": "Impulsos rápidos y cortos",
-    "Quick Long Lunges": "Impulsos rápidos y largos",
-    "Moderate Long Lunges": "Impulsos largos",
-    "Slow Long Lunges": "Impulsos lentos y largos",
-    "Slow Short Lunges": "Impulsos lentos y cortos",
-    "Slow Short Movement": "Movimientos lentos y cortos",
+    "Medium": "Velocidad media",
+    "Fast": "Rápido",
+    "Very fast": "Muy rápido",
     "Seaweed": "Alga wakame",
     "Sea grapes": "Uva de mar",
     "Sea cucumber": "Pepino de mar",
