Added updated fossil translations (ES)

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -268,14 +268,14 @@
     "Left megalo side": "Mitad izq. Megaloceros",
     "Ophthalmo skull": "Cráneo oftalmosaurio",
     "Ophthalmo torso": "Cuerpo oftalmosaurio",
-    "Pachysaurus skull": "Cráneo paquicefalosaurio",
-    "Pachysaurus tail": "Cola paquicefalosaurio",
+    "Pachy skull": "Cráneo paquicefalosaurio",
+    "Pachy tail": "Cola paquicefalosaurio",
     "Parasaur skull": "Cráneo parasaurio",
     "Parasaur tail": "Cola parasaurio",
     "Parasaur torso": "Cuerpo parasaurio",
     "Plesio skull": "Cráneo plesiosaurio",
     "Plesio tail": "Cola plesiosaurio",
-    "Plesio body": "Torso plesiosaurio",
+    "Plesio torso": "Torso plesiosaurio",
     "Left ptera wing": "Ala izquierda pteranodonte",
     "Right ptera wing": "Ala derecha pteranodonte",
     "Ptera body": "Cuerpo pteranodonte",
