Updated translations for other languages (DE, FR, JA)

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -247,14 +247,14 @@
     "Left megalo side": "Riesenhirsch-Hälfte (L)",
     "Ophthalmo skull": "Ophthalmosaurus-Schädel",
     "Ophthalmo torso": "Ophthalmosaurus-Torso",
-    "Pachysaurus skull": "Pachysaurus-Vorderteil",
-    "Pachysaurus tail": "Pachysaurus-Hinterteil",
+    "Pachy skull": "Pachysaurus-Vorderteil",
+    "Pachy tail": "Pachysaurus-Hinterteil",
     "Parasaur skull": "Parasaurus-Schädel",
     "Parasaur tail": "Parasaurus-Schwanz",
     "Parasaur torso": "Parasaurus-Torso",
     "Plesio skull": "Plesiosaurus-Schädel",
     "Plesio tail": "Plesiosaurus-Schwanz",
-    "Plesio body": "Plesiosaurus-Torso",
+    "Plesio torso": "Plesiosaurus-Torso",
     "Left ptera wing": "Pteranodon-Flügel (L)",
     "Right ptera wing": "Pteranodon-Flügel (R)",
     "Ptera body": "Pteranodon-Torso",
