--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -268,14 +268,14 @@
     "Left megalo side": "Partie gauche de mégacéros",
     "Ophthalmo skull": "Crâne d’ophtalmosaure",
     "Ophthalmo torso": "Corps d’ophtalmosaure",
-    "Pachysaurus skull": "Crâne de pachycéphal",
-    "Pachysaurus tail": "Queue de pachycéphal",
+    "Pachy skull": "Crâne de pachycéphal",
+    "Pachy tail": "Queue de pachycéphal",
     "Parasaur skull": "Crâne de parasaurolophus",
     "Parasaur tail": "Queue de parasaurolophus",
     "Parasaur torso": "Torse de parasaurolophus",
     "Plesio skull": "Crâne de plésiosaure",
     "Plesio tail": "Queue de plésiosaure",
-    "Plesio body": "Corps de plésiosaure",
+    "Plesio torso": "Corps de plésiosaure",
     "Left ptera wing": "Aile gauche de ptéranodon",
     "Right ptera wing": "Aile droite de ptéranodon",
     "Ptera body": "Corps de ptéranodon",
