--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -268,14 +268,14 @@
     "Left megalo side": "メガロケロスのひだりはんしん",
     "Ophthalmo skull": "オフタモサウルスのあたま",
     "Ophthalmo torso": "オフタモサウルスのからだ",
-    "Pachysaurus skull": "パキケファロのあたま",
-    "Pachysaurus tail": "パキケファロのからだ",
+    "Pachy skull": "パキケファロのあたま",
+    "Pachy tail": "パキケファロのからだ",
     "Parasaur skull": "パラサウロロフスのあたま",
     "Parasaur tail": "パラサウロロフスのしっぽ",
     "Parasaur torso": "パラサウロロフスのからだ",
     "Plesio skull": "フタバサウルスのあたま",
     "Plesio tail": "フタバサウルスのしっぽ",
-    "Plesio body": "フタバサウルスのからだ",
+    "Plesio torso": "フタバサウルスのからだ",
     "Left ptera wing": "プテラノドンのさよく",
     "Right ptera wing": "プテラノドンのうよく",
     "Ptera body": "プテラノドンのあたま",
