Fixed a typo error in Spanish translation

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -81,7 +81,7 @@
     "Robust cicada": "Cigarra oriental",
     "Giant cicada": "Cigarra gigante",
     "Walker cicada": "Cigarra común",
-    "Evening cicada": "Cigarilla",
+    "Evening cicada": "Cigarrilla",
     "Cicada shell": "Muda de cigarra",
     "Red dragonfly": "Libélula roja",
     "Darner dragonfly": "Libélula caballito del diablo",
